--- a/scripts/css/menustyle.css
+++ b/scripts/css/menustyle.css
@@ -17,13 +17,47 @@ h1 {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     height: 50px;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 
     display: flex;
     align-items: center;
     justify-content: space-around;
+    
 }
 
 .home_main_paragraph {
     width: 500;
+}
+
+.tabbutton {
+
+  border: none;
+  background-color: rgb(224, 57, 57);
+  color: white;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  
+
+  cursor: pointer;
+}
+
+.tabbutton:hover {
+    background-color: rgb(170, 44, 44);
+}
+
+.zimbabwebut {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  height: 100px;
+  width: 100px;
+  background-image: url('../../assets/images/zimbabwe.png');
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+}
+
+.zimbabwebut:hover {
+    background-image: url('../../assets/images/zimbabwesel.png');
 }
