--- a/scripts/css/menustyle.css
+++ b/scripts/css/menustyle.css
@@ -1,10 +1,13 @@
+/* ---------- Global ---------- */
+
 body {
+  margin: 0;
   background-color: rgb(212, 216, 219);
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 20px;
 }
 
 h1 {
@@ -13,58 +16,91 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* ---------- Menu Bar ---------- */
+
 .menutab {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    height: 50px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    
-}
-
-.home_main_paragraph {
-    width: 500;
+  background-color: black;
+  height: 50px;
+  width: 100%;
+  display: flex;
 }
 
 .tabbutton {
-
+  flex: 1;
   border: none;
   background-color: rgb(224, 57, 57);
   color: white;
-  text-align: center;
-  height: 100%;
-  width: 100%;
-  
-
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   cursor: pointer;
 }
 
 .tabbutton:hover {
-    background-color: rgb(170, 44, 44);
+  background-color: rgb(170, 44, 44);
 }
 
-.zimbabwebut {
-  background-color: rgba(255, 255, 255, 0);
+/* ---------- Main Content ---------- */
+
+.home_main_paragraph {
+  width: 500px;
+}
+
+/* ---------- Map Container ---------- */
+
+#mapbox {
+  position: relative;
+  width: 800px;
+  height: 600px;
+  background-color: #222;
+  margin: 20px;
+}
+
+/* ---------- Map Buttons  ---------- */
+
+.mappoint {
+  position: absolute;
+  background: none;
   border: none;
-  height: 100px;
-  width: 100px;
-  background-image: url('../../assets/images/zimbabwe.png');
-  background-size: cover;
-  background-position: center;
+  padding: 0;
   cursor: pointer;
 }
 
-.zimbabwebut:hover {
-    background-image: url('../../assets/images/zimbabwesel.png');
+.mappoint img {
+  width: 140px;     /* scale here */
+  height: auto;     /* preserves TRUE proportions */
+  display: block;
 }
 
-.midcenter {
-  display: flex;
-  justify-content: center;  
-  align-items: center;      
-  height: 100vh;            
+/* ---------- Zimbabwe ---------- */
+
+.zimbabwebut {
+  top: 60%;
+  left: 55%;
+  background-image: url('../../assets/images/zimbabwe.png');
+  width: 120px;
+  aspect-ratio: 1 / 1;
+}
+
+.zimbabwebut:hover {
+  background-image: url('../../assets/images/zimbabwesel.png');
+}
+
+/* ---------- South Africa ---------- */
+
+.sabut {
+  top: 60%;
+  left: 45%;
+  background-image: url('../../assets/images/southafrica.png');
+  width: 180px;    
+  aspect-ratio: 1 / 1;
+}
+
+.sabut:hover {
+  background-image: url('../../assets/images/southafricasel.png');
+}
+
+/* ---------- Utility ---------- */
+
+.hidden {
+  display: none;
 }
