--- a/scripts/css/menustyle.css
+++ b/scripts/css/menustyle.css
@@ -1,13 +1,11 @@
-/* ---------- Global ---------- */
-
 body {
-  margin: 0;
   background-color: rgb(212, 216, 219);
+  margin: 0;
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 20px;
 }
 
 h1 {
@@ -16,90 +14,122 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-/* ---------- Menu Bar ---------- */
-
 .menutab {
-  background-color: black;
-  height: 50px;
-  width: 100%;
-  display: flex;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    height: 50px;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.home_main_paragraph {
+    width: 500;
 }
 
 .tabbutton {
-  flex: 1;
+
   border: none;
   background-color: rgb(224, 57, 57);
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  
+
   cursor: pointer;
 }
 
 .tabbutton:hover {
-  background-color: rgb(170, 44, 44);
+    background-color: rgb(170, 44, 44);
 }
-
-/* ---------- Main Content ---------- */
-
-.home_main_paragraph {
-  width: 500px;
-}
-
-/* ---------- Map Container ---------- */
-
-#mapbox {
-  position: relative;
-  width: 800px;
-  height: 600px;
-  background-color: #222;
-  margin: 20px;
-}
-
-/* ---------- Map Buttons  ---------- */
-
-.mappoint {
-  position: absolute;
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-}
-
-.mappoint img {
-  width: 140px;     /* scale here */
-  height: auto;     /* preserves TRUE proportions */
-  display: block;
-}
-
-/* ---------- Zimbabwe ---------- */
 
 .zimbabwebut {
-  top: 60%;
-  left: 55%;
+  top: 0%;
+  left: 70.4%;
+  background-color: rgba(255, 255, 255, 0);
+  width: 255px;
+  height: 236px;
+  border: none;
   background-image: url('../../assets/images/zimbabwe.png');
-  width: 120px;
-  aspect-ratio: 1 / 1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  
 }
 
 .zimbabwebut:hover {
-  background-image: url('../../assets/images/zimbabwesel.png');
+    background-image: url('../../assets/images/zimbabwesel.png');
 }
 
-/* ---------- South Africa ---------- */
-
 .sabut {
-  top: 60%;
-  left: 45%;
+  top: 36%;
+  left: 35%;
+  background-color: rgba(255, 255, 255, 0);
+  width: 534px;
+  height: 471px;
+  border: none;
   background-image: url('../../assets/images/southafrica.png');
-  width: 180px;    
-  aspect-ratio: 1 / 1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .sabut:hover {
-  background-image: url('../../assets/images/southafricasel.png');
+    background-image: url('../../assets/images/southafricasel.png');
 }
 
-/* ---------- Utility ---------- */
+.botswanabut {
+  top: 12%;
+  left: 49%;
+  background-color: rgba(255, 255, 255, 0);
+  width: 306px;
+  height: 322px;
+  border: none;
+  background-image: url('../../assets/images/botswana.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.botswanabut:hover {
+    background-image: url('../../assets/images/botswanasel.png');
+}
+
+.namibiabut {
+  top: 7.7%;
+  left: 16%;
+  background-color: rgba(255, 255, 255, 0);
+  width: 441px;
+  height: 425px;
+  border: none;
+  background-image: url('../../assets/images/namibia.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.namibiabut:hover {
+    background-image: url('../../assets/images/namibiasel.png');
+}
+
+
+.mappoint {
+  position:absolute;
+  cursor: pointer;
+}
+
+#mapbox {
+  position: relative;
+  background-color: #6AD4E7;
+  left: 25%;
+  width: 800px;
+  height: 600px;
+}
 
 .hidden {
   display: none;
