--- a/scripts/css/menustyle.css
+++ b/scripts/css/menustyle.css
@@ -140,12 +140,16 @@ h1 {
   cursor: pointer;
 }
 
-#mapbox {
+.mapbox {
   margin-top: 50px;
   position: relative;
   left: 22.5%;
   width: 800px;
   height: 600px;
+}
+
+.mapinfo {
+  width: 20%;
 }
 
 .hidden {
